toolbox items aligned in the center. ColorSelected has new fixed width and height

--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@
         display: flex;
         flex-direction: column;
         gap: 50px;
+        align-items: center;
     }
 
         .boardControls button{
@@ -44,7 +45,12 @@
                 border: 1px solid #212738;
                 flex: 1;
             }
-        
+    
+    .colorSelected{
+        border: 10px solid #57C4E5;
+        width: 100px;
+        height: 100px;
+    }
 body{
     background-color: #212738;
 }
